Fix list items to use margin bottom instead for auto margin collapse and specify just padding-left since thats all we want to change (let normalization stylesheet handle the rest as it should).

--- a/assets/stylesheets/styles.scss
+++ b/assets/stylesheets/styles.scss
@@ -80,10 +80,10 @@ p {
 	padding: 0;
 }
 ul, ol {
-	padding: 0 0 0 25px;
+	padding-left: 25px;
 }
 li {
-  padding-bottom: 5px;
+  margin-bottom: 10px;
 }
 h1, h2, h3, h4, h5 {
   color: #666;
